...
  BackHandler {
    // Move the app to background
    (context as MainActivity).moveTaskToBack(true)
  }

  Scaffold(
      modifier = Modifier.testTag("overviewScreen"),
      floatingActionButton = {
        Column(
            verticalArrangement = Arrangement.spacedBy(16.dp), // Space between FABs
            horizontalAlignment = Alignment.End) {
              CreateItemFab(
                  expandedFab = expanded,
...
                    folderViewModel = folderViewModel,
                    noteViewModel = noteViewModel,
                    userViewModel = userViewModel,
                    navigationActions = navigationActions)

                if (showCreateNoteDialog) {
                  NoteDialog(
                      onDismiss = { showCreateNoteDialog = false },
                      onConfirm = { newName, visibility ->
                        val note =
                            Note(
                                id = noteViewModel.getNewUid(),
                                title = newName,
...
                      },
                      action = stringResource(R.string.create))
                }

                // Logic to show the dialog to create a folder
                if (showCreateFolderDialog) {
                  FolderDialog(
                      onDismiss = { showCreateFolderDialog = false },
                      onConfirm = { newName, visibility ->
                        val folderId = folderViewModel.getNewFolderId()
                        folderViewModel.addFolder(
                            Folder(
                                id = folderId,
                                name = newName,
                                userId = userViewModel.currentUser.value!!.uid,
                                parentFolderId = parentFolderId.value,
                                visibility = visibility,
                                lastModified = Timestamp.now()))

                        showCreateFolderDialog = false
...
                  modifier = Modifier.testTag("createNote")),
              CustomDropDownMenuItem(
                  text = { Text(stringResource(R.string.create_folder)) },
                  icon = {
                    Icon(
                        painter = painterResource(id = R.drawable.folder_create_icon),
                        contentDescription = "createFolder")
                  },
                  onClick = {
                    onExpandedFabChange(false)
                    showCreateFolderDialog(true)
                    folderViewModel.selectedParentFolderId(null)
                  },
...
      notes = userRootNotes,
      folders = userRootFolders,
      gridModifier =
          Modifier.fillMaxWidth()
              .padding(horizontal = 20.dp)
              .padding(paddingValues)
              .testTag("noteAndFolderList"),
      folderViewModel = folderViewModel,
      noteViewModel = noteViewModel,
      userViewModel = userViewModel,
      navigationActions = navigationActions,
      paddingValues = paddingValues,
      columnContent = {
        Text(
            modifier = Modifier.testTag("emptyNoteAndFolderPrompt"),
            text = stringResource(R.string.you_have_no_notes_or_folders_yet),
            color = MaterialTheme.colorScheme.onBackground)
        Spacer(modifier = Modifier.height(50.dp))
        RefreshButton {
          userViewModel.currentUser.value?.let { noteViewModel.getRootNotesFromUid(it.uid) }
          userViewModel.currentUser.value?.let {
...
