...
        navigationActions = navigationActions,
        notesToFlashcard = notesToFlashcard)
  }

  Card(
      modifier =
          Modifier.testTag("noteCard")
              .height(140.dp)
              .padding(4.dp)
              .semantics(mergeDescendants = true, properties = {})
              .fillMaxWidth()
              // Enable drag and drop for the note card as a source if the current user is the owner
              .dragAndDropSource {
...

                if (note.isOwner(currentUser.value!!.uid) &&
                    navigationActions.currentRoute() != Screen.SEARCH) {
                  Row(verticalAlignment = Alignment.CenterVertically) {
                    Icon(
                        modifier =
                            Modifier.testTag("showBottomSheetButton").size(24.dp).clickable {
                              showBottomSheet = true
                            },
                        imageVector = Icons.Filled.MoreVert,
                        contentDescription = null,
                        tint = MaterialTheme.colorScheme.onPrimaryContainer)
                  }
...
) {
  var showFileSystemPopup by remember { mutableStateOf(false) }
  var showDeletePopup by remember { mutableStateOf(false) }
  var showFlashcardDialog by remember { mutableStateOf(false) }

  if (showFileSystemPopup) {
    FileSystemPopup(
        onDismiss = {
          showFileSystemPopup = false
          onDismiss()
        },
        folderViewModel = folderViewModel,
        onMoveHere = { selectedFolder ->
...
          showFlashcardDialog = false
          onDismiss()
        })
  }

  ModalBottomSheet(
      modifier = Modifier.testTag("noteModalBottomSheet"),
      containerColor = MaterialTheme.colorScheme.onPrimary,
      onDismissRequest = onDismiss,
      content = {
        Column(modifier = Modifier.padding(16.dp)) {
          Row(
              modifier =
                  Modifier.fillMaxWidth()
                      .clickable { showFileSystemPopup = true }
                      .padding(vertical = 8.dp)
                      .testTag("moveNoteBottomSheet"),
              verticalAlignment = Alignment.CenterVertically) {
                Icon(
                    imageVector = Icons.Default.FolderOpen,
                    contentDescription = stringResource(R.string.move_note))
                Spacer(modifier = Modifier.width(16.dp))
                Text(
...

          Row(
              modifier =
                  Modifier.fillMaxWidth()
                      .clickable { showDeletePopup = true }
                      .padding(vertical = 8.dp)
                      .testTag("deleteNoteBottomSheet"),
              verticalAlignment = Alignment.CenterVertically) {
                Icon(
                    imageVector = Icons.Outlined.Delete,
                    contentDescription = stringResource(R.string.delete_note),
                    tint = MaterialTheme.colorScheme.error)
                Spacer(modifier = Modifier.width(16.dp))
...
          if (noFlashcardsCreated) {
            Spacer(modifier = Modifier.height(16.dp))
            Column { Text(text = stringResource(R.string.no_flashcards_created)) }
          }
        }
      },
      confirmButton = {},
      dismissButton = {
        if (!isLoading) {
          TextButton(onClick = { onDismiss() }, modifier = Modifier.testTag("closeAction")) {
            Text(stringResource(R.string.close), color = MaterialTheme.colorScheme.error)
          }
        }
...
