...
    onClick: () -> Unit
) {
  val dropSuccess = remember { mutableStateOf(false) }

  Card(
      modifier =
          Modifier.testTag("folderCard")
              .padding(vertical = 4.dp)
              .dragAndDropSource {
                detectTapGestures(
                    // When tapping on a folder, perform onCLick
                    onTap = { onClick() },
                    onLongPress = {
...
                }

            OutlinedTextField(
                value = name,
                onValueChange = { name = Folder.formatName(it) },
                label = { Text("Folder Name") },
                modifier = Modifier.testTag("inputFolderName"))

            OptionDropDownMenu(
                value = visibility?.toReadableString() ?: "Choose visibility",
                expanded = expandedVisibility,
                buttonTag = "visibilityButton",
                menuTag = "visibilityMenu",
...
              Button(onClick = onDismiss, modifier = Modifier.testTag("dismissFolderAction")) {
                Text("Cancel")
              }
              Button(
                  enabled = name.isNotEmpty() && visibility != null,
                  onClick = { onConfirm(name, visibility ?: Visibility.DEFAULT) },
                  modifier = Modifier.testTag("confirmFolderAction")) {
                    Text(action)
                  }
            }
          }
    }
  }
...
